It was created forms and tables files and the htmlHome was modified

--- a/html/htmlHome.html
+++ b/html/htmlHome.html
@@ -24,6 +24,12 @@
         <li class="opsHtml">
             <h2><a href="exercise7.html">Exercise 7: Nested Lists</a></h2>
         </li>
+        <li class="opsHtml">
+            <h2><a href="tables.html">Tables</a></h2>
+        </li>
+        <li class="opsHtml">
+            <h2><a href="forms.html">Forms</a></h2>
+        </li>
         
     </ul>
 </body>
