forms.html the textarea properties was modified

--- a/html/forms.html
+++ b/html/forms.html
@@ -34,7 +34,7 @@
             <div>
                 <label for="message">Message:</label><br>
                 <textarea name="message" id="message" cols="30" rows="3" maxlength="40"
-                    placeholder="Send a message"></textarea>
+                    placeholder="Send a message" style="resize: none;"></textarea>
             </div>
             <div>
                 <input type="submit" id="submit">
