--- a/html/forms.html
+++ b/html/forms.html
@@ -11,8 +11,20 @@
             margin-right: 1px;
         }
 
-        .userName, .email {
+        .userName,
+        .email {
             margin-left: 17px;
+        }
+
+        header>H2 {
+            text-align: center;
+        }
+
+        .more-input>div>input,
+        select,
+        fieldset {
+            margin-left: 25px;
+            margin-right: 1px;
         }
     </style>
 </head>
@@ -20,21 +32,21 @@
 <body>
     <section>
         <header>
-            <H2 style="text-align: center;">Form 1 - Contact Form</H2>
+            <H2>Form 1 - Contact Form</H2>
         </header>
-        <form>
+        <form class="form-one">
             <div>
                 <label for="name">Name: </label>
-                <input type="text" id="name" class="userName">
+                <input type="text" id="name" class="userName" required maxlength="20" minlength="5">
             </div>
             <div>
                 <label for="email">Email: </label>
-                <input type="email" id="email" class="email">
+                <input type="email" id="email" class="email" required maxlength="30" minlength="8">
             </div>
             <div>
                 <label for="message">Message:</label><br>
-                <textarea name="message" id="message" cols="30" rows="3" maxlength="40"
-                    placeholder="Send a message" style="resize: none;"></textarea>
+                <textarea name="message" id="message" cols="30" rows="3" maxlength="40" placeholder="Send a message"
+                    style="resize: none;"></textarea>
             </div>
             <div>
                 <input type="submit" id="submit">
@@ -42,6 +54,87 @@
 
         </form>
     </section>
+    <hr>
+    <section>
+        <header>
+            <H2>More Input types HTML</H2>
+        </header>
+        <form action="" method="get" class="more-input">
+
+            <div>
+                <label for="color">Color:</label><br>
+                <input type="color" id="color">
+            </div>
+            <div>
+                <label for="date">Date:</label><br>
+                <input type="date" id="date">
+            </div>
+            <div>
+                <label for="number">Number:</label><br>
+                <input type="number" id="number" min="7" max="28">
+            </div>
+            <div>
+                <label for="url">Url:</label><br>
+                <input type="url" id="url">
+            </div>
+            <div>
+                <label for="file">File:</label><br>
+                <input type="file" id="file">
+            </div>
+            <div>
+                <label for="range">Range:</label><br>
+                <input type="range" id="range" min="10" max="50">
+            </div>
+            <div>
+                <label for="dtl">DateTime Local:</label><br>
+                <input type="datetime-local" id="dtl">
+            </div>
+            <div>
+                <label>Checkbox (attribute name must be different):</label><br>
+                <input type="checkbox" name="checkbox1" value="checked off" checked>
+                <input type="checkbox" name="checkbox2" value="I agree">
+            </div>
+            <div>
+                <fieldset>
+                    <legend>Radio button (attribute name must be the same):</legend>
+                    <input type="radio" id="r1" name="radioButton" value="one">
+                    <label for="r1">One</label>
+                    <input type="radio" id="r2" name="radioButton" value="two">
+                    <label for="r2">Two</label>
+                    <input type="radio" id="r3" name="radioButton" value="three">
+                    <label for="r3">Three</label>
+
+                </fieldset>
+            </div>
+            <div>
+                <label for="password">Password:</label><br>
+                <input type="password" id="password">
+            </div>
+            <div>
+                <label for="select">Select:</label><br>
+                <select name="power" id="select">
+                    <option value="invisible">Invisible</option>
+                    <option value="fly">Fly</option>
+                    <option value="Inmortal">Inmortal</option>
+                </select>
+            </div>
+            <div>
+                <label for="selectInput">Select Input style:</label><br>
+                <input type="text" name="favFruit" id="selectInput" list="favoriteFruit">
+                <datalist id="favoriteFruit">
+                    <option>Banana</option>
+                    <option>Apple</option>
+                    <option>Orange</option>
+                </datalist>
+            </div>
+
+            <div>
+                <br>
+                <input type="submit">
+            </div>
+        </form>
+    </section>
+    <hr>
 </body>
 
 </html>
