It was created css folder

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             <h2><a href="html/htmlHome.html">Html</a>
             </h2>
         </li>
-
-    </ul>
-
+        <li class="opsCss">
+            <h2><a href="css/cssHome.html">CSS</a>
+            </h2>
+        </li>
 </body>
 
 </html>
