--- a/html/htmlHome.html
+++ b/html/htmlHome.html
@@ -10,7 +10,7 @@
 <body>
     <ul id="principalMenu">
         <li class="opsHtml">
-            <h2><a href="exercise2.html">Exercise 2</a></h2>`
+            <h2><a href="exercise2.html">Exercise 2</a></h2>
         </li>
         <li class="opsHtml">
             <h2><a href="exercise3.html">Exercise 3</a></h2>
