it was ended the first google fonts implementation

--- a/css/cssHome.html
+++ b/css/cssHome.html
@@ -11,6 +11,10 @@
             <h2><a href="exercise1/cssexercise1.html">CSS Exercise 1</a>
             </h2>
         </li>
+        <li class="opsHtml">
+            <h2><a href="google-font/cssgooglefont.html">Google Fonts</a>
+            </h2>
+        </li>
     </ul>
 </body>
 
