it was ended the second CSS exercise

--- a/css/cssHome.html
+++ b/css/cssHome.html
@@ -15,6 +15,10 @@
             <h2><a href="google-font/cssgooglefont.html">Google Fonts</a>
             </h2>
         </li>
+        <li class="opsHtml">
+            <h2><a href="exercise2/cssexercise2.html">CSS Exercise 2</a>
+            </h2>
+        </li>
     </ul>
 </body>
 
