It was working with css float elements part one

--- a/css/cssHome.html
+++ b/css/cssHome.html
@@ -16,8 +16,10 @@
             </h2>
         </li>
         <li class="opsHtml">
-            <h2><a href="exercise2/cssexercise2.html">CSS Exercise 2</a>
-            </h2>
+            <h2><a href="exercise2/cssexercise2.html">CSS Exercise 2</a></h2>
+        </li>
+        <li class="opsHtml">
+            <h2><a href="some-classes/cssFloatElements.html">CSS Float Elements</a></h2>
         </li>
     </ul>
 </body>
